feat: team players API
