# internal/gen/swagger2/models/team_player_list_item.go
@@ -1,0 +1,100 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// TeamPlayerListItem team player list item
+//
+// swagger:model TeamPlayerListItem
+type TeamPlayerListItem struct {
+
+	// avatar url
+	AvatarURL string `json:"avatar_url,omitempty"`
+
+	// display name
+	DisplayName string `json:"display_name,omitempty"`
+
+	// first name
+	FirstName string `json:"first_name,omitempty"`
+
+	// is captain
+	// Required: true
+	IsCaptain bool `json:"is_captain"`
+
+	// last name
+	LastName string `json:"last_name,omitempty"`
+
+	// steam id
+	// Required: true
+	SteamID string `json:"steam_id"`
+}
+
+// Validate validates this team player list item
+func (m *TeamPlayerListItem) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateIsCaptain(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateSteamID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *TeamPlayerListItem) validateIsCaptain(formats strfmt.Registry) error {
+
+	if err := validate.Required("is_captain", "body", bool(m.IsCaptain)); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *TeamPlayerListItem) validateSteamID(formats strfmt.Registry) error {
+
+	if err := validate.RequiredString("steam_id", "body", m.SteamID); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this team player list item based on context it is used
+func (m *TeamPlayerListItem) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *TeamPlayerListItem) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *TeamPlayerListItem) UnmarshalBinary(b []byte) error {
+	var res TeamPlayerListItem
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
