# internal/gen/swagger2/restapi/operations/uniplay_api.go
@@ -86,6 +86,9 @@ func NewUniplayAPI(spec *loads.Document) *UniplayAPI {
 		TeamGetTeamListHandler: team.GetTeamListHandlerFunc(func(params team.GetTeamListParams) team.GetTeamListResponder {
 			return team.GetTeamListNotImplemented()
 		}),
+		TeamGetTeamPlayersHandler: team.GetTeamPlayersHandlerFunc(func(params team.GetTeamPlayersParams) team.GetTeamPlayersResponder {
+			return team.GetTeamPlayersNotImplemented()
+		}),
 		CompendiumGetWeaponClassesHandler: compendium.GetWeaponClassesHandlerFunc(func(params compendium.GetWeaponClassesParams) compendium.GetWeaponClassesResponder {
 			return compendium.GetWeaponClassesNotImplemented()
 		}),
@@ -97,6 +100,9 @@ func NewUniplayAPI(spec *loads.Document) *UniplayAPI {
 		}),
 		PlayerUpdatePlayerHandler: player.UpdatePlayerHandlerFunc(func(params player.UpdatePlayerParams) player.UpdatePlayerResponder {
 			return player.UpdatePlayerNotImplemented()
+		}),
+		TeamUpdateTeamHandler: team.UpdateTeamHandlerFunc(func(params team.UpdateTeamParams) team.UpdateTeamResponder {
+			return team.UpdateTeamNotImplemented()
 		}),
 	}
 }
@@ -161,6 +167,8 @@ type UniplayAPI struct {
 	PlayerGetPlayerStatsHandler player.GetPlayerStatsHandler
 	// TeamGetTeamListHandler sets the operation handler for the get team list operation
 	TeamGetTeamListHandler team.GetTeamListHandler
+	// TeamGetTeamPlayersHandler sets the operation handler for the get team players operation
+	TeamGetTeamPlayersHandler team.GetTeamPlayersHandler
 	// CompendiumGetWeaponClassesHandler sets the operation handler for the get weapon classes operation
 	CompendiumGetWeaponClassesHandler compendium.GetWeaponClassesHandler
 	// PlayerGetWeaponStatsHandler sets the operation handler for the get weapon stats operation
@@ -169,6 +177,8 @@ type UniplayAPI struct {
 	CompendiumGetWeaponsHandler compendium.GetWeaponsHandler
 	// PlayerUpdatePlayerHandler sets the operation handler for the update player operation
 	PlayerUpdatePlayerHandler player.UpdatePlayerHandler
+	// TeamUpdateTeamHandler sets the operation handler for the update team operation
+	TeamUpdateTeamHandler team.UpdateTeamHandler
 
 	// ServeError is called when an error is received, there is a default handler
 	// but you can set your own with this
@@ -285,6 +295,9 @@ func (o *UniplayAPI) Validate() error {
 	if o.TeamGetTeamListHandler == nil {
 		unregistered = append(unregistered, "team.GetTeamListHandler")
 	}
+	if o.TeamGetTeamPlayersHandler == nil {
+		unregistered = append(unregistered, "team.GetTeamPlayersHandler")
+	}
 	if o.CompendiumGetWeaponClassesHandler == nil {
 		unregistered = append(unregistered, "compendium.GetWeaponClassesHandler")
 	}
@@ -296,6 +309,9 @@ func (o *UniplayAPI) Validate() error {
 	}
 	if o.PlayerUpdatePlayerHandler == nil {
 		unregistered = append(unregistered, "player.UpdatePlayerHandler")
+	}
+	if o.TeamUpdateTeamHandler == nil {
+		unregistered = append(unregistered, "team.UpdateTeamHandler")
 	}
 
 	if len(unregistered) > 0 {
@@ -438,6 +454,10 @@ func (o *UniplayAPI) initHandlerCache() {
 	if o.handlers["GET"] == nil {
 		o.handlers["GET"] = make(map[string]http.Handler)
 	}
+	o.handlers["GET"]["/teams/{team_id}/players"] = team.NewGetTeamPlayers(o.context, o.TeamGetTeamPlayersHandler)
+	if o.handlers["GET"] == nil {
+		o.handlers["GET"] = make(map[string]http.Handler)
+	}
 	o.handlers["GET"]["/compendiums/weapon-classes"] = compendium.NewGetWeaponClasses(o.context, o.CompendiumGetWeaponClassesHandler)
 	if o.handlers["GET"] == nil {
 		o.handlers["GET"] = make(map[string]http.Handler)
@@ -451,6 +471,10 @@ func (o *UniplayAPI) initHandlerCache() {
 		o.handlers["PUT"] = make(map[string]http.Handler)
 	}
 	o.handlers["PUT"]["/players/{steam_id}"] = player.NewUpdatePlayer(o.context, o.PlayerUpdatePlayerHandler)
+	if o.handlers["PUT"] == nil {
+		o.handlers["PUT"] = make(map[string]http.Handler)
+	}
+	o.handlers["PUT"]["/teams/{team_id}"] = team.NewUpdateTeam(o.context, o.TeamUpdateTeamHandler)
 }
 
 // Serve creates a http handler to serve the API over HTTP
